# Simple_RAG

./: .gitignore  README.md  chat.py  config.py  filechathistory.py  knowledgebaseservice.py  pyproject.toml  rag.py  vector_storage.py  web_file_uploader.py
persist_dir/: chroma.sqlite3
长期记忆储存/: knowledgebaseservice.py  user_0001
